# Consultor-de-BD-con-Lenguaje-Natural

./: .gitignore  README.md  session-ses_1d96.md
Backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/app/: main.py
Backend/app/api/v1/: router.py
Backend/app/api/v1/endpoints/: datasets.py  health.py  users.py
Backend/app/core/: config.py  exceptions.py  security.py
Backend/app/db/: init_db.py  session.py
Backend/app/models/: user.py
Backend/app/repositories/: user_repository.py
Backend/app/schemas/: dataset.py  user.py
Backend/app/services/: dataset_service.py  nl_sql_service.py  user_service.py
Backend/app/storage/: example_querys.txt
Backend/app/utils/: pagination.py
Backend/tests/: test_health.py
Frontend/: README.md  package-lock.json  package.json
Frontend/src/: App.tsx  index.css
Frontend/src/api/: client.ts  datasets.ts  types.ts
Frontend/src/components/: DatasetSchemaViewer.tsx  DatasetUploader.tsx  ErrorMessage.tsx  GeneratedSqlViewer.tsx  HealthStatus.tsx  Layout.tsx  LoadingState.tsx  NaturalLanguageQueryPanel.tsx  ResultsTable.tsx  SqlQueryPanel.tsx
Frontend/src/components/chat/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ChatResultPreview.tsx  ChatSqlBlock.tsx
Frontend/src/hooks/: useDatasetChat.ts
Frontend/src/pages/: HomePage.tsx
Frontend/src/styles/: globals.css
Frontend/src/types/: chat.ts
